<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet_song_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/song_detail_art"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/song_album_art"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="Song Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/song_details_artist"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_len"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="Length: 2:47" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/song_details_album" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/song_details_genre" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_yr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="Year: 2016" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_plays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center|bottom"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Plays: 45" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/song_detail_playtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center|bottom"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Playtime: 32:45" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_play_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/play_song"
        android:src="@drawable/ic_play_arrow_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>