<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.music.artists.ArtistInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/image_of_artist"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/artist_info_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textStyle="bold"
                tools:text="Artist Name" />

            <TextView
                android:id="@+id/artist_info_playtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Playtime: 0:45:35" />

            <TextView
                android:id="@+id/artist_info_album_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/artist_info_albums"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_artist_albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/artist_info_song_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/info_songs"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_artist_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>